# c-llvm-toolchain

./: .gitignore  README.md
.github/workflows/: build-tool.yml  c-compiler-llvm.yml  c-compiler.yml  c-linker.yml  c-linter.yml  c-preprocessor.yml  c-static-analyzer.yml  testing-suite.yml
build-tool/: CMakeLists.txt  README.md
c-compiler/: .gitignore  CMakeLists.txt  README.md
c-compiler-llvm/: CMakeLists.txt  README.md
c-compiler-llvm/docs/: language_spec.md
c-compiler-llvm/examples/: array_sum.mc  control_flow.mc  fibonacci.mc  gcd.mc  struct_point.mc
c-compiler-llvm/include/: lexer.h  sema.h  token.h
c-compiler-llvm/src/: ast.cpp  codegen.cpp  lexer.cpp  main.cpp  parser.cpp
c-compiler-llvm/tests/: codegen_test.cpp  lexer_test.cpp  parser_test.cpp  smoke_test.cpp
c-compiler/docs/: ir_walkthrough.md  language_spec.md
c-compiler/examples/: bit_ops.mc  fizzbuzz.mc  pointer_swap.mc  sum_of_squares.mc
c-compiler/include/: ast.h  codegen.h  parser.h  sema.h
c-compiler/scripts/: configure.sh
c-compiler/src/: ast.cpp  codegen.cpp  main.cpp  parser.cpp  sema.cpp
c-compiler/tests/: codegen_test.cpp  parser_test.cpp  sema_test.cpp
c-linker/: README.md
c-linker/docs/: SPEC.md
c-linker/examples/: main.c
c-linker/include/: cli.h  diagnostic.h  elf64.h  elf_reader.h  (+6 more)
c-linter/: CMakeLists.txt  README.md
c-preprocessor/: README.md
c-static-analyzer/: CMakeLists.txt  README.md
parallel-make/: Cargo.toml
parallel-make/src/: cli.rs  lib.rs
parallel-make/tests/: makefile_parser.rs  parallel_make_e2e.rs  planner.rs
testing/: README.md
(+87 files in other folders)
